feat :sparkles: adicionando logo

--- a/landing-page/src/app/componentes/header/header.component.html
+++ b/landing-page/src/app/componentes/header/header.component.html
@@ -1,5 +1,12 @@
 <header>
-    <div class="logo"></div>
-    <nav class="nav"></nav>
+    <div class="logo">
+        <!--* Quando for editar troque pelo logo da empresa *-->
+      <i class="fa-solid fa-cube"></i>
+    </div>
+    <nav class="nav">
+        <ul>
+            <li></li>
+        </ul>
+    </nav>
     <div class="icon-container"></div>
 </header>
