--- a/landing-page/src/app/componentes/header/header.component.html
+++ b/landing-page/src/app/componentes/header/header.component.html
@@ -4,9 +4,21 @@
       <i class="fa-solid fa-cube"></i>
     </div>
     <nav class="nav">
-        <ul>
-            <li></li>
+        <ul class="menu">
+            <li>Início</li>
+            <li>Sobre Nós</li>
+            <li>Contact</li>
         </ul>
     </nav>
-    <div class="icon-container"></div>
+    <div class="icon-container">
+        <!--* Quando for editar troque pelos links da empresa *-->
+        <ul>
+            <li>
+                <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/?locale=pt_BR"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+        </ul>
+    </div>
 </header>
