feat :sparkles: adicionando botão pro menu e adicionando flex

--- a/landing-page/src/app/componentes/header/header.component.html
+++ b/landing-page/src/app/componentes/header/header.component.html
@@ -1,7 +1,10 @@
 <header>
-    <div class="logo">
+    <div class="header-top-container">
         <!--* Quando for editar troque pelo logo da empresa *-->
       <i class="fa-solid fa-cube"></i>
+      <button>
+          <i class="fa-solid fa-bars"></i>
+      </button>
     </div>
     <nav class="nav">
         <ul class="menu">
