refactor :recycle: adicionando logo generico

--- a/landing-page/src/app/componentes/header/header.component.html
+++ b/landing-page/src/app/componentes/header/header.component.html
@@ -1,7 +1,10 @@
 <header>
     <div class="header-top-container">
         <!--* Quando for editar troque pelo logo da empresa *-->
-      <i class="fa-solid fa-cube"></i>
+      <img
+      class="logo"
+      src="https://freeiconshop.com/wp-content/uploads/edd/image-outline-filled.png"
+      alt="logo">
       <button>
           <i class="fa-solid fa-bars"></i>
       </button>
