--- a/landing-page/src/app/styles/components/_header.scss
+++ b/landing-page/src/app/styles/components/_header.scss
@@ -26,12 +26,36 @@ header {
       &:hover {
         color: $fifth ;
       }
+      &:active {
+        color: $primary;
+      }
     }
   }
-  .navigation 
+
+  .nav {
+  display: none;
+  }
+  
+  .nav.visible
   {
     display: flex;
-    flex-direction: column;
+    width: 100%;
+    align-self: center;
+    justify-content: center;
+    .menu {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      text-align: center;
+      font-size: 20px;
+      li {
+        margin-bottom: 10px;
+        width: 100%;
+        &:hover {
+          background-color: $primary;
+        }
+      }
+    }
   }
 
   .icon-container {
