--- a/landing-page/src/app/styles/index.css
+++ b/landing-page/src/app/styles/index.css
@@ -27,9 +27,31 @@ header .header-top-container button {
 header .header-top-container button:hover {
   color: Darkgrey;
 }
-header .navigation {
+header .header-top-container button:active {
+  color: SlateGrey;
+}
+header .nav {
+  display: none;
+}
+header .nav.visible {
+  display: flex;
+  width: 100%;
+  align-self: center;
+  justify-content: center;
+}
+header .nav.visible .menu {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+}
+header .nav.visible .menu li {
+  margin-bottom: 10px;
+  width: 100%;
+}
+header .nav.visible .menu li:hover {
+  background-color: SlateGrey;
 }
 header .icon-container {
   display: none;
