style :sparkles: criando mixin de media query

--- a/landing-page/src/app/styles/utils/_variables.scss
+++ b/landing-page/src/app/styles/utils/_variables.scss
@@ -3,3 +3,10 @@ $secondary: DarkSlateGray;
 $third: LightGray; 
 $fourth: DarkSlateGrey;
 $fifth: Darkgrey;
+
+$breakpoints : (
+  s: 576px,
+  m: 768px,
+  l : 992px,
+  xs: 1250px,
+);
