--- a/landing-page/src/app/styles/components/_header.scss
+++ b/landing-page/src/app/styles/components/_header.scss
@@ -6,6 +6,31 @@ header {
   background-color: $secondary;
   color: $third;
 
+  @include mq(m) {
+    flex-direction: row; 
+    padding-right: 30px;
+    align-items: center;
+
+    .header-top-container {
+      width: fit-content;
+
+      .logo {
+        width: 60px;
+      }
+
+      button {
+        display: none; // Oculta o botão em telas médias
+        @include mq(l) {
+          display: inline-block; // Exibe o botão em telas grandes (l)
+        }
+      }
+    }
+
+    .nav {
+      display: none;
+    }
+  }
+
   ul {
     list-style: none;
   }
@@ -14,9 +39,14 @@ header {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    @include mq(m) {
+      width: fit-content;
+        }
+
     .logo {
       width: 60px;
     }
+
     button {
       width: 60px;
       font-size: 25px;
@@ -29,25 +59,50 @@ header {
       &:active {
         color: $primary;
       }
+      @include mq(l) {
+        display: none;  
+      }
     }
   }
 
   .nav {
-  display: none;
+    display: none;
+        @include mq(m) {
+      display: flex;
+
+      .menu {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        font-size: 25px;
+        justify-content: space-around;
+
+        li {
+          margin-right: 45px; 
+          &:hover {
+            background-color: $primary;
+          }
+          &:active {
+            background-color: $fourth;
+          }
+        }
+      }
+    }
   }
-  
-  .nav.visible
-  {
+
+  .nav.visible {
     display: flex;
-    width: 100%;
+    width: 90%;
     align-self: center;
     justify-content: center;
+
     .menu {
       display: flex;
       flex-direction: column;
       width: 100%;
       text-align: center;
       font-size: 20px;
+      
       li {
         margin-bottom: 10px;
         width: 100%;
@@ -60,5 +115,19 @@ header {
 
   .icon-container {
     display: none;
+    @include mq(m) {
+      display: flex;
+      font-size: 35px;
+      ul {
+        display: flex;
+        i {
+          color: $third;
+          margin-right: 10px;
+          &:hover{
+            color: $primary;
+          }
+        }
+      }
+    }
   }
 }
