style :gem: finalizando estilo do header

--- a/landing-page/src/app/styles/index.css
+++ b/landing-page/src/app/styles/index.css
@@ -130,4 +130,4 @@ header .icon-container {
   header .icon-container ul i:hover {
     color: SlateGrey;
   }
-}/*# sourceMappingURL=index.css.map */
+}
