--- a/landing-page/src/app/styles/index.scss
+++ b/landing-page/src/app/styles/index.scss
@@ -1,4 +1,9 @@
   @import './utils/variables';
   @import './utils/mixin';
 
+  // Components
   @import './components/header';
+
+  // Pages
+  @import './pages/hero';
+
