--- a/landing-page/src/app/pages/hero/hero.component.html
+++ b/landing-page/src/app/pages/hero/hero.component.html
@@ -1,4 +1,11 @@
 <section id="hero" class="hero-container">
-    <div class="left-container"></div>
+    <div class="left-container">
+        <div class="text-container">
+            <h1>Nome da Empresa</h1>
+            <h2>Frase resumindo a empressa</h2>
+            <p>Texto curto sobre a empresa e seus serviços</p>
+            <p>Adicione quantos paragrafos forem necessários</p>
+        </div>
+    </div>
     <div class="right-container"></div>
 </section>
