feat :sparkles: adicionando botão de contato

--- a/landing-page/src/app/pages/hero/hero.component.html
+++ b/landing-page/src/app/pages/hero/hero.component.html
@@ -5,6 +5,7 @@
             <h2>Frase resumindo a empressa</h2>
             <p>Texto curto sobre a empresa e seus serviços</p>
             <p>Adicione quantos paragrafos forem necessários</p>
+            <button>Fala Conosco</button>
         </div>
     </div>
     <div class="right-container"></div>
