--- a/landing-page/src/app/styles/pages/_hero.scss
+++ b/landing-page/src/app/styles/pages/_hero.scss
@@ -1,10 +1,21 @@
 .hero-container {
   display: flex;
   justify-content: center;
-  padding-top: 30px;
+  padding-top: 150px;
+  background-color: $third-color; //mudar conforme necessidade
   .text-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    h1 {
+      font-size: 25px;
+      margin-bottom: 10px;
+    }
+    h2 {
+        width: 90%;
+        font-size: 35px;
+        margin-bottom: 10px;
+      }
   }
 }
