--- a/landing-page/src/app/styles/pages/_hero.scss
+++ b/landing-page/src/app/styles/pages/_hero.scss
@@ -15,7 +15,13 @@
     h2 {
         width: 90%;
         font-size: 35px;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
       }
+    
+    p {
+      width: 90%;
+      font-size: 20px;
+      margin-bottom: 15px;
+    }
   }
 }
