style :gem: mudando cor da variável

--- a/landing-page/src/app/styles/utils/_variables.scss
+++ b/landing-page/src/app/styles/utils/_variables.scss
@@ -4,7 +4,7 @@ $secondary-color : DarkSlateGray;
 
 $third-color : LightGray;
 
-$fourth-color : DarkSlateGrey;
+$fourth-color : #465F5F;
 
 $fifth-color : Darkgrey;
 
