refactor :recycle: corrigindo texto

--- a/landing-page/src/app/pages/hero/hero.component.html
+++ b/landing-page/src/app/pages/hero/hero.component.html
@@ -2,10 +2,10 @@
     <div class="left-container">
         <div class="text-container">
             <h1>Nome da Empresa</h1>
-            <h2>Frase resumindo a empressa</h2>
+            <h2>Frase resumindo a empresa</h2>
             <p>Texto curto sobre a empresa e seus serviços</p>
             <p>Adicione quantos paragrafos forem necessários</p>
-            <button>Fala Conosco</button>
+            <button>Fale Conosco</button>
         </div>
     </div>
     <div class="right-container">
