--- a/landing-page/src/app/app.component.html
+++ b/landing-page/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-
 <main>
     <app-hero></app-hero>
-    <app-about></app-about> 
+    <app-about></app-about>
+    <app-contacts></app-contacts> 
 </main>
