--- a/landing-page/src/app/styles/pages/_contacts.scss
+++ b/landing-page/src/app/styles/pages/_contacts.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: $fifth-color;
+    background-color: $third-color; //mudar conforme necessidade
     padding-top: 35px;
     font-size: 25px;
   
@@ -28,9 +28,16 @@
         flex-direction: column;
         margin-bottom: 15px;
         width: 86%;
+        @include mq(m) {
+            width: 40%;
+          }
+        }
 
         .input {
           height: 28px;
+          @include mq(m) {
+            height: 40px;
+          }
         }
   
         input,
@@ -38,7 +45,6 @@
           margin-top: 5px;
           font-size: 25px;
         }
-        
       
       }
 
@@ -59,4 +65,4 @@
           }
       }
     }
-  }
+  
