feat :sparkles: enviando email com form submit

--- a/landing-page/src/app/pages/contacts/contacts.component.html
+++ b/landing-page/src/app/pages/contacts/contacts.component.html
@@ -1,11 +1,11 @@
 <section id="contacts" class="contacts-container">
     <h3 class="title"> Contatos</h3>
-    <form action="/submit" method="post" class="form-container">
+    <form action="https://formsubmit.co/jeferson_gjr@hotmail.com" method="POST" class="form-container">
         <label for="name-input">Nome:
-          <input type="text" class="input" id="name-input" name="name-input" required>
+          <input type="text" class="input" id="name-input" name="name" required>
         </label>
         <label for="email-input">E-mail:
-            <input type="text" class="input" id="email-input" name="email-input" required>
+            <input type="email" class="input" id="email-input" name="email" required>
         </label>
     
         <label for="textField">Digite sua mensagem:
