--- a/landing-page/src/app/componentes/footer/footer.component.html
+++ b/landing-page/src/app/componentes/footer/footer.component.html
@@ -9,4 +9,9 @@
             </li>
         </ul>
     </div>
+    <div class="text-footer">
+        <p>2024 © Cascading Life Stile. Alguns direitos reservados</p>
+        <p>Desenvolvido por <a href="https://github.com/cascadingLS" target="_blank">Cascading Life Stile</a></p>
+        <p>Utilizando Angular, Scss e Font Awesome</p>
+    </div>
 </footer>
