feat :sparkles: adicionando  links

--- a/landing-page/src/app/componentes/header/header.component.html
+++ b/landing-page/src/app/componentes/header/header.component.html
@@ -11,9 +11,9 @@
     </div>
     <nav class="nav" [ngClass]="{'visible': isMenuVisible}">
         <ul class="menu">
-            <li>Início</li>
-            <li>Sobre Nós</li>
-            <li>Contact</li>
+            <li><a href="#hero">Início</a></li>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#contacts">Contato</a></li>
         </ul>
     </nav>
     <div class="icon-container">
