--- a/landing-page/src/app/styles/components/_header.scss
+++ b/landing-page/src/app/styles/components/_header.scss
@@ -81,6 +81,10 @@ header {
         justify-content: space-around;
 
         li {
+          a{
+            text-decoration: none;
+            color: $third-color;
+          }
           margin-right: 45px; 
           &:hover {
             background-color: $primary-color;
