--- a/landing-page/src/app/styles/pages/_contacts.scss
+++ b/landing-page/src/app/styles/pages/_contacts.scss
@@ -55,6 +55,7 @@
         font-size: 25px;
         color: $third-color;
         background-color: $secondary-color;
+        margin-bottom: 35px;
         &:hover {
             background-color: $secondary-color;
             color: $primary-color;
